# backup-sqlite3-python

./: README.md  pyproject.toml
backup_sqlite3/: __init__.py  __main__.py  compression.py  main.py
tests/: test_compression.py
