[tool.poetry]
name = "backup-sqlite3"
version = "0.1.0"
description = ""
authors = ["Cologler <skyoflw@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "backup_sqlite3"}]

[tool.poetry.dependencies]
python = "^3.11"
portalocker = "^2.10.1"
pyyaml = "^6.0.1"
typer = "^0.21.0"
zstandard = "^0.23.0"

[tool.poetry.scripts]
backup-sqlite3 = "backup_sqlite3.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
